--- a/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
+++ b/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
@@ -90,7 +90,7 @@ body {
     top: -240px;
     cursor: pointer;
 }
-h1 {
+.center>h1 {
     margin-top: -100px;
 }
 .center {
@@ -464,7 +464,7 @@ hr {
     border-block-color:#000000;
 }
 #back {
-    background-image: url(images/saltbackgroundpic.webp);
+    background-image: url(../images/saltbackgroundpic.webp);
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-size:280px;
