--- a/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
+++ b/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    margin: 0px;
 }
 .header {
     margin-top: 10px;
@@ -90,20 +91,26 @@ body {
     top: -240px;
     cursor: pointer;
 }
+.banner {
+    width: 100%;
+}
 .center>h1 {
-    margin-top: -100px;
+    color: #ffffff;
 }
 .center {
+    width: 100%;
     color: white;
     font-size: 18px;
+    margin-top: -80px;
     text-align: center;
-    line-height: 65px;
+    line-height: 30px;
+    margin-bottom: 40px;
 }
 .pictures>li>img {
-    margin-right: 10px;
-    margin-top: -10px;
+    margin-right: 20px;
+    object-fit: cover;
     width: 210px;
-    height: 330px;
+    height: 300px;
     cursor: pointer;
     /* display: inline-flex; */
 }
@@ -134,7 +141,7 @@ h4 {
 }
 @font-face {
     font-family: salt;
-    src: url(font/BarlowCondensed-Thin.ttf);
+    src: url(../font/BarlowCondensed-Thin.ttf);
 }
 .redheading {
     color: red;
@@ -247,10 +254,6 @@ h5 {
     margin-left: 70px;
     margin-right: 70px;
     line-height: 30px;
-}
-@font-face {
-    font-family: salt;
-    src: url(font/BarlowCondensed-Thin.ttf);
 }
 .weekredheading {
     color: red;
@@ -469,4 +472,116 @@ hr {
     background-attachment:fixed;
     background-size:280px;
     background-position-y: bottom;
+}
+
+@media only screen and (max-width:576px) {
+    .header {
+        margin-top: 0px;
+        margin-left: 0px;
+        height: 50px;
+        color: white;
+        font-size: 12px;
+        background-color: orange;
+        display: inline-flex;
+    }
+    .header img {
+        margin-left: 15px;
+        margin-top: 5px;
+        height: 40px;
+        width: 100px;
+    }
+    .inline {
+        display: inline-flex;
+        margin-left: 0px;
+    }
+    .inline>li {
+        padding-top: 5px;
+        padding-left: 0px;
+        margin-right: 9px;
+        font-size: 12px;
+        text-align: center;
+        cursor: pointer;
+        list-style: none;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .user {
+        height: 20px;
+        padding-top: 16px;
+        padding-left: 0px;
+        cursor: pointer;
+    }
+    .cart {
+        height: 20px;
+        padding-top: 16px;
+        padding-left: 0px;
+        cursor: pointer;
+    }
+    .cart0 {
+        border: 1px solid;
+        border-color: red;
+        width: 13px;
+        height: 13px;
+        color: #ffffff;
+        font-size: 10px;
+        border-radius: 30px;
+        background-color: red;
+        position: relative;
+        left: 29px;
+        top: 10px;
+        cursor: pointer;
+    }
+    .order {
+        border: 1px solid;
+        border-color: red;
+        width: 0px;
+        height: 40px;
+        padding-right: 39px;
+        color: white;
+        font-size: 0px;
+        background-color: red;
+        border-radius: 30px;
+        margin-left: 20px;
+        margin-top: 5px;
+        cursor: pointer;
+    }
+    .leftarrow {
+        height: 25px;
+        width: 28px;
+        position: relative;
+        right: 37px;
+        top: 13px;
+        cursor: pointer;
+    }
+    .center>img {
+        width: 100%;
+    }
+    .banner {
+        width: 100%;
+    }
+    .center>h1 {
+        color: #ffffff;
+    }
+    .center {
+        color: white;
+        font-size: 18px;
+        margin-top: -80px;
+        text-align: center;
+        line-height: 30px;
+        margin-bottom: 40px;
+    }
+    .pictures>li>img {
+        margin-right: 10px;
+        object-fit: cover;
+        width: 210px;
+        height: 300px;
+        cursor: pointer;
+    }
+    .pictures {
+        display: inline-flex;
+        list-style: none;
+    }
+    h4 {
+        margin-top: 0px;
+        cursor: pointer;
+    }
 }
