--- a/SALT,N AND PEPPER HOMEPAGE/style.css
+++ b/SALT,N AND PEPPER HOMEPAGE/style.css
@@ -1,49 +1,53 @@
 body {
-margin: 0px;
+    margin: 0px;
+    background-color: black;
 }
+
 .header {
     width: 100%;
     height: 100px;
-    margin-left: 0px;
     color: white;
-    font-size: 15px;
+    font-size: 17px;
     display: inline-flex;
     background-color: black;
 }
+
 .header>img {
     margin-left: 80px;
     margin-top: 10px;
 }
+
 .inline {
     display: inline-flex;
-    margin-left: 180px;
+    margin-left: 250px;
     /* margin-top: 20px; */
 }
-.inline>li{
+.inline>li {
     padding-top: 25px;
-    padding-left: 20px;
-    cursor:pointer;
+    padding-left: 30px;
+    cursor: pointer;
     list-style: none;
     font-family: Arial, Helvetica, sans-serif;
- }
- button {
+}
+button {
     border: 1 solid;
-    border-color:#ffffff;
+    border-color: #ffffff;
     width: 140px;
     border-width: 1px;
     height: 55px;
     text-align: center;
     font-size: 13px;
     background-color: black;
-    color:white;
+    color: white;
     border-radius: 200px;
     cursor: pointer;
     margin-left: 30px;
     margin-top: 20px;
 }
+
 .order {
     border: 1 solid;
-    border-color:red;
+    border-color: red;
     width: 145px;
     height: 55px;
     font-size: 14px;
@@ -55,6 +59,7 @@ margin: 0px;
     margin-top: 20px;
     cursor: pointer;
 }
+
 .fa-circle-arrow-right {
     height: 28px;
     width: 28px;
@@ -64,4 +69,177 @@ margin: 0px;
     top: 32px;
     cursor: pointer;
     color: #ffffff;
+}
+
+.banner>img {
+    width: 100%;
+    /* position: absolute; */
+}
+
+.bannerbutton {
+    border: 1 solid;
+    border-color: red;
+    width: 243px;
+    height: 58px;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 17px;
+    color: white;
+    top: 381px;
+    left: 72%;
+    background-color: red;
+    position: absolute;
+    cursor: pointer;
+}
+
+@font-face {
+    font-family: saltt;
+    src: url(font/Futura\ Black.ttf);
+}
+
+.welcome {
+    color: #ffffff;
+}
+
+.welcome>p {
+    text-align: center;
+    margin-top: 40px;
+    font-family: sans-serif;
+    font-weight: lighter;
+    font-size: 33px;
+    margin-bottom: -40px;
+}
+
+.welcome>p>span {
+    font-size: 40px;
+    letter-spacing: 0px;
+    font-family: saltt;
+    font-weight: 100;
+}
+
+.welcome>.paragraph {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #a8a6a6;
+    font-size: 16px;
+    margin-top: 50px;
+}
+
+.Category {
+    margin: 60px auto;
+    padding-left: 0px;
+    width: 0px;
+    height: 100px;
+}
+
+/* .Category td {
+    background-color:#ffffff;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+} */
+.Category img {
+    background-color: #ffffff;
+    width: 180px;
+    padding: 20px 20px;
+    height: 100px;
+    margin-right: 30px;
+}
+
+.now {
+    border: 1px solid;
+    width: 175px;
+    height: 50px;
+    font-size: 14px;
+    color: white;
+    border-radius: 200px;
+    margin-left: 0px auto;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.franchise {
+    background-color: #0e0f0f;
+    width: 100%;
+}
+
+.headsection {
+    color: #ffffff;
+    text-align: center;
+}
+
+@media only screen and (max-width:576px) {
+    .header {
+        width: 100%;
+        height: 50px;
+        color: white;
+        font-size: 12px;
+        display: inline-flex;
+        background-color: orange;
+    }
+    .header>img {
+        margin-left: 15px;
+        margin-top: 10px;
+        height: 35px;
+        width: 100px;
+    }
+    .inline {
+        display: inline-flex;
+        margin-left: 0px;
+        /* margin-top: 20px; */
+    }
+    .inline>li {
+        padding-top: 7px;
+        padding-left: 5px;
+        margin-right: 12px;
+        font-size: 12px;
+        text-align: center;
+        cursor: pointer;
+        list-style: none;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    button {
+        border: 1 solid;
+        border-color: #ffffff;
+        width: 80px;
+        border-width: 1px;
+        height: 30px;
+        text-align: center;
+        font-size: 9px;
+        background-color: black;
+        color: white;
+        margin-left: 5px;
+        border-radius: 30px;
+        cursor: pointer;
+        margin-top: 13px;
+    }
+    .order {
+        border: 1 solid;
+        border-color: red;
+        width: 80px;
+        height: 30px;
+        font-size: 9px;
+        padding-right: 39px;
+        color: white;
+        background-color: red;
+        border-radius: 30px;
+        margin-left: 5px;
+        margin-top: 13px;
+        cursor: pointer;
+    }
+    
+    .fa-circle-arrow-right {
+        /* height: 1em;
+        width: 1em; */
+        font-size: 18px;
+        position: relative;
+        right: 30px;
+        top: 19px;
+        cursor: pointer;
+        color: #ffffff;
+    }
+    .banner>img {
+        width: 100%;
+        /* position: absolute; */
+    }
 }
