--- a/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
+++ b/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
@@ -475,10 +475,14 @@ hr {
 }
 
 @media only screen and (max-width:576px) {
+    body {
+        margin: 0px;
+    }
     .header {
+        width: 100%;
+        height: 50px;
         margin-top: 0px;
         margin-left: 0px;
-        height: 50px;
         color: white;
         font-size: 12px;
         background-color: orange;
@@ -495,9 +499,9 @@ hr {
         margin-left: 0px;
     }
     .inline>li {
-        padding-top: 5px;
+        padding-top: 4px;
         padding-left: 0px;
-        margin-right: 9px;
+        margin-left: 7px;
         font-size: 12px;
         text-align: center;
         cursor: pointer;
@@ -505,29 +509,30 @@ hr {
         font-family: Arial, Helvetica, sans-serif;
     }
     .user {
-        height: 20px;
-        padding-top: 16px;
-        padding-left: 0px;
+        height: 25px;
+        padding-top: 13px;
+        padding-left: 10px;
+        max-height: 25px;
         cursor: pointer;
     }
     .cart {
-        height: 20px;
-        padding-top: 16px;
+        height: 25px;
+        padding-top: 13px;
         padding-left: 0px;
         cursor: pointer;
     }
     .cart0 {
         border: 1px solid;
         border-color: red;
-        width: 13px;
+        width: 10px;
         height: 13px;
         color: #ffffff;
         font-size: 10px;
         border-radius: 30px;
         background-color: red;
         position: relative;
-        left: 29px;
-        top: 10px;
+        left: 32px;
+        top: 8px;
         cursor: pointer;
     }
     .order {
@@ -535,21 +540,21 @@ hr {
         border-color: red;
         width: 0px;
         height: 40px;
-        padding-right: 39px;
+        padding-right: 30px;
         color: white;
         font-size: 0px;
         background-color: red;
         border-radius: 30px;
-        margin-left: 20px;
         margin-top: 5px;
         cursor: pointer;
     }
     .leftarrow {
-        height: 25px;
-        width: 28px;
+        height: 30px;
+        width: 25px;
         position: relative;
-        right: 37px;
-        top: 13px;
+        right: 30px;
+        top: 10px;
+        margin-right: 0px;
         cursor: pointer;
     }
     .center>img {
@@ -582,6 +587,64 @@ hr {
     }
     h4 {
         margin-top: 0px;
+        cursor: pointer;
+    }
+    .info {
+        background-color:#0e0f0f;
+        display: inline-flex;
+       
+    }
+    .infopic {
+        text-align: left;
+        height: 503px;
+       
+    }
+    .infopara {
+        margin-top: 40px;
+        text-align: justify;
+        margin-left: 70px;
+        margin-right: 70px;
+        line-height: 30px;
+    }
+    @font-face {
+        font-family: salt;
+        src: url(../font/BarlowCondensed-Thin.ttf);
+    }
+    .redheading {
+        color: red;
+        font-family:salt;
+        letter-spacing: 9px;
+        font-size: 17px;
+    }
+    .paragraph {
+        color:#a8a6a6;
+    }
+    .heading {
+        margin-top: 0px;
+        font-size: 42px;
+        color: white;
+    }
+    .learn {
+        border: 1 solid;
+        background-color: #0e0f0f;
+        color: white;
+        text-align: left;
+        font-size: 13px;
+        padding-left: 22px;
+        border-width: 1px;
+        border-color: #ffffff;
+        border-radius: 100px;
+        width: 160px;
+        height: 50px;
+        margin-top: 50px;
+        cursor: pointer;
+    }
+    .learnicon {
+        height: 30px;
+        width: 30px;
+        position: relative;
+        top: 10px;
+        right: 60px;
         cursor: pointer;
     }
 }
