--- a/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
+++ b/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/style.css
@@ -565,8 +565,12 @@ hr {
     }
     .center>h1 {
         color: #ffffff;
+        font-size: 24px;
     }
     .center {
+        width: 100%;
+        height: 400px;
+        background-color: orange;
         color: white;
         font-size: 18px;
         margin-top: -80px;
@@ -575,14 +579,23 @@ hr {
         margin-bottom: 40px;
     }
     .pictures>li>img {
-        margin-right: 10px;
+        width: 10px;
+        height: 10px;
+        margin-right: 0px;
         object-fit: cover;
+        flex: 0;
         width: 210px;
         height: 300px;
         cursor: pointer;
     }
     .pictures {
-        display: inline-flex;
+        width: 100%;
+        /* display: inline-flex; */
+        flex-direction: row;
+        flex: 1;
+        margin-left: 0px;
+        align-items: flex-start;
+        justify-content: flex-start;
         list-style: none;
     }
     h4 {
