--- a/PEPSI/style.css
+++ b/PEPSI/style.css
@@ -2,6 +2,15 @@
     font-family: sofia;
     src: url(Fonts/sofiapro-light.otf);
 }
+@font-face {
+    font-family: cervo;
+    src: url(Fonts/Fontspring-DEMO-cervoneue-blackneue.otf);
+}
+.header {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+}
 .navbar {
     background-color: #0065c3;
     height: 85px;
@@ -53,6 +62,62 @@
     animation-duration: 0.3s;
 }
 .pepsi-btn {
+    --color: white;
+    width: 200px;
+    height: 33px;
+    margin-right: 30px;
+    background-color: transparent;
+    border-radius: 30px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    font-weight: bold;
+    font-size: 12px;
+    border: 2px solid white;
+    font-family: inherit;
+    text-transform: uppercase;
+    color: var(--color);
+    z-index: 1;
+   }
+   
+   .pepsi-btn::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   
+   .pepsibtn::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .pepsi-btn::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .pepsi-btn:hover::before, .button:hover::after {
+    height: 410px;
+    width: 410px;
+   }
+   
+   .pepsi-btn:hover {
+    color:#0065c3;
+   }
+   
+   .pepsi-btn:active {
+    filter: brightness(.8);
+   }
+   
+/* .pepsi-btn {
     background: transparent;
     border: 2px solid white;
     border-radius: 30px;
@@ -63,8 +128,9 @@
     font-weight: bold;
     margin-right: 20px;
     cursor: pointer;
-}
-@-webkit-keyframes zoomIn {
+} */
+   
+/* @-webkit-keyframes zoomIn {
     0% {
         opacity: 0;
         -webkit-transform: scale3d(.3, .3, .3);
@@ -92,60 +158,592 @@
     color: #0065c3;
     -webkit-animation-name: zoomIn;
     animation-name: zoomIn;
+} */
+.navbar-toggler {
+    border: 2px solid #ffffff;
+    width: 50px;
+    padding: 0px;
+    height: 40px;
+    text-align: center;
+}
+@media only screen and (max-width: 992px) {
+    .navbar {
+        height: auto;
+    }
+    .myitems {
+        text-align: center;
+    }
+    .navbar-collapse {
+        text-align: center;
+    }
+    .pepsi-btn::before, .button::after {
+        content: '';
+        display: block;
+        width: 0px;
+        height: 50px;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        border-radius: 50%;
+        z-index: -1;
+        background-color: var(--color);
+        transition: 1s ease;
+       }
+       
+       .pepsibtn::before {
+        top: -1em;
+        left: -1em;
+       }
+       
+       .pepsi-btn::after {
+        left: calc(100% + 10px);
+        top: calc(100% + 10px);
+       }
+       
+       .pepsi-btn:hover::before, .button:hover::after {
+        height: 410px;
+        width: 200%;
+       }
+       
+       .pepsi-btn:hover {
+        color:#0065c3;
+       }
+       
+       .pepsi-btn:active {
+        filter: brightness(.8);
+       }
 }
 .content {
-    /* background-image: url(images/bachgroung.png);
-    background-size:cover;
-    height: 700px;
-    background-repeat: no-repeat; */
-    width: 100%;
-    position: relative;
+    background-image: url(images/bachgroung.png);
+    height: 850px;
 }
-.background {
-    width: 100%;
-    height: 700px;
+.bottles {
+    width: 63%;
+    margin-top: 160px;
+    margin-left: -150px;
 }
-.bottle {
-    object-fit:contain;
-    width: 65%;
-    /* height: 100vh; */
-    top: 75px;
-    right: 630px;
-    position: absolute;
-}
-.unlock {
-    position: absolute;
-    top: 100px;
+.umlock {
     width: 35%;
-    left: 650px;
+    margin-top: -160px;
+    margin-left: -60px;
 }
-.get-it-btn {
-    border: 2px solid #ffffff;
-    background: transparent;
-    border-radius: 30px;
-    left: 810px;
-    top: 65%;
-    width: 150px;
-    height: 38px;
-    font-weight: bold;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #ffffff;
-    position: absolute;
-}
-.content-paragraph {
-    position: absolute;
-    color: #ffffff;
-    text-align: center;
-    font-size: 11px;
-    top: 78%;
-    left: 49%;
-    right: 15%;
-}
-.content-1 {
-    background-color: black;
-    position: relative;
-    width: 100%;
-    height: 700px;
+.Get-it-now {
+    margin-top: -300px;
+    margin-left: 800px;
 }
 
+.Get-it-now>button::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   .Get-it-now>button {
+    --color: white;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    background-color:transparent;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 16px;
+    width: 160px;
+    height: 38px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    color: var(--color);
+    z-index: 1;
+}
+   
+   .Get-it-now>button::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .Get-it-now>button::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .Get-it-now>button:hover::before, .button:hover::after {
+    height: 410px;
+    width: 410px;
+   }
+   
+   .Get-it-now>button:hover {
+    color:#0065c3;
+   }
+   
+   .Get-it-now>button:active {
+    filter: brightness(.8);
+   }
+.Get-it-now > p {
+    color: #ffffff;
+    font-size: 11px;
+    font-weight:600;
+    text-align: center;
+    margin-top: 50px;
+    margin-right: 270px;
+    margin-left: -120px;
+}
+.content2 {
+    background-color: black;
+    height: 710px;
+    width: 100%;
+    /* position: absolute; */
+}
+.pepsi-can {
+    width: 75%;
+    margin-left: -90px;
+    margin-top: -110px;
+}
+.new-improved-taste {
+    margin-left: -450px;
+    margin-top: -410px;
+}
+.canzero {
+    width: 40%;
+    margin-left: 50px;
+    margin-top: -200px;
+}
+.try-it-to-believe-it {
+    width: 30%;
+    margin-top: -550px;
+    margin-left: 800px;
+}
+.content3 {
+    background-image: url(images/Desktop_Background.png);
+    height: 668px;
+    background-position:center;
+}
+.Nitro_Pepsi_CAN {
+    width: 32%;
+    margin-top: 40px;
+    margin-left: 200px;
+}
+.Nitro_Logo {
+    width: 32%;
+    margin-left: 60px;
+}
+.nitro-heading {
+    color: #ffffff;
+    font-weight:bolder;
+    font-size: 26px;
+    font-family: cervo;
+    text-align: center;
+    margin-top: -180px;
+    margin-left: 500px;
+}
+.LEARN-button::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   .LEARN-button {
+    --color: white;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    margin-left: 850px;
+    background-color:transparent;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 16px;
+    width: 160px;
+    height: 38px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    color: var(--color);
+    z-index: 1;
+}
+   
+   .LEARN-button::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .LEARN-button::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .LEARN-button:hover::before, .button:hover::after {
+    height: 410px;
+    width: 410px;
+   }
+   
+   .LEARN-button:hover {
+    color:#0065c3;
+   }
+   
+   .LEARN-button:active {
+    filter: brightness(.8);
+   }
+.content4 {
+    background-color: #265cc5;
+    height: 690px;
+    width: 100%;
+    display: flex;
+}
+.Thumbnail {
+    list-style: none;
+    /* width: 430px; */
+    display: flex;
+    flex-direction: column;
+}
+.Thumbnail>li>img {
+   margin-top: 70px;
+}
+.Thumbnail h6 {
+    color: #ffffff;
+    text-align: center;
+    font-weight: bolder;
+    line-height: 35px;
+    margin: 0px;
+    background-color: #1437bf;
+    height: 40px;
+    width: 430px;
+}
+.img2 {
+    margin-top: -40px;
+}
+.inline {
+    list-style: none;
+}
+.content4pic {
+    width: 100%;
+    height: 105vh;
+    object-fit: cover;
+    /* margin-left: 25px; */
+}
+.tag-line {
+    width: 500px;
+    margin-top: -220px;
+    margin-left: 355px;
+}
+.content5 {
+    background-color: #01408d;
+    height: 770px;
+    background-image: url(images/yellowblue.png);
+    background-size: contain;
+    background-position: left;
+    background-repeat: no-repeat;
+}
+.mangoheadline {
+    width: 400px;
+    margin-left: 50px;
+    margin-top: -250px;
+}
+.mangocan {
+    width: 894px;
+}
+>.content6 {
+    width: 100%;
+    height: 700px;
+}
+.content6>video {
+    width: 100%;
+    margin-top: -95px;
+}
+.content7 {
+    background-image: url(images/twil-bg-mb.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: -10px;
+}
+.twil-can {
+    width: 750px;
+    margin-top: 70px;
+}
+.twil-header-dt {
+    width: 470px;
+    margin-left: 50px;
+}
+.content8 {
+    background-image: url(images/content8bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 530px;
+    display: flex;
+}
+.left-section{
+    list-style: none;
+}
+.left-section>li>h1 {
+    color: #ffffff;
+    font-family: cervo;
+    font-size: 62px;
+    line-height: 70px;
+    padding-top: 100px;
+    margin-left: 120px;
+}
+.left-section>li>p {
+    color: #ffffff;
+    text-align: left;
+    margin-left: 120px;
+    width: 400px;
+}
+.viewproduct::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   .viewproduct {
+    --color: white;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    margin-left: 120px;
+    margin-top: 15px;
+    background-color:transparent;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 14px;
+    width: 160px;
+    height: 32px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    color: var(--color);
+    z-index: 1;
+}
+   
+   .viewproduct::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .viewproduct::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .viewproduct:hover::before, .button:hover::after {
+    height: 410px;
+    width: 410px;
+   }
+   
+   .viewproduct:hover {
+    color:#0065c3;
+   }
+   
+   .viewproduct:active {
+    filter: brightness(.8);
+   }
+.right-section {
+    list-style: none;
+}
+.right-section>li>img {
+    width: 500px;
+    margin-left: 50px;
+    margin-top: 150px;
+}
+.content9{
+    text-align: center;
+}
+.content9>h1{
+    color: #0065c3;
+    font-family: cervo;
+    text-align: center;
+    font-size: 60px;
+}
+.content9>img{
+    width: 250px;
+    margin: -5px;
+    height: 250px;
+    object-fit:cover;
+    cursor: pointer;
+}
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1)
+    }
+
+    50% {
+        -webkit-transform: scale3d(1.05, 1.05, 1.05);
+        transform: scale3d(1.05, 1.05, 1.05)
+    }
+
+    to {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1)
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1)
+    }
+
+    50% {
+        -webkit-transform: scale3d(1.05, 1.05, 1.05);
+        transform: scale3d(1.05, 1.05, 1.05)
+    }
+
+    to {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1)
+    }
+}
+.content9>img:hover {
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function:ease-in-out;
+    color: rgb(0, 0, 0, 1000);
+}
+.footer {
+    background-color: #0065c3;
+    height: 300px;
+    margin-top: 5px;
+    display: flex;
+}
+.footerimage{
+    list-style: none;
+    margin-top: 80px;
+}
+.footerimg {
+    width: 105px;
+}
+@-webkit-keyframes rotateOut {
+    0% {
+        opacity: 1
+    }
+
+    to {
+        -webkit-transform: rotate(380deg);
+        transform: rotate(380deg);
+        opacity: 1
+    }
+}
+
+@keyframes rotateOut {
+    0% {
+        opacity: 1
+    }
+
+    to {
+        -webkit-transform: rotate(380deg);
+        transform: rotate(380deg);
+        opacity: 1
+    }
+}
+.footerimg:hover{
+    -webkit-animation-name: rotateOut;
+    animation-name: rotateOut;
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    animation-duration: 0.3s;
+}
+.footer1{
+    color: #ffffff;
+    font-weight: bolder;
+    list-style: none;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+.footer2{
+    color: #ffffff;
+    font-weight: bolder;
+    list-style: none;
+    margin-top: 100px;
+    margin-left: 40px;
+}
+.footer3{
+    color: #ffffff;
+    font-weight: bolder;
+    list-style: none;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+.footer4{
+    list-style: none;
+    margin-top: 70px;
+    margin-left: 40px;
+}
+   .footerbtn {
+    --color: white;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    margin-left: 120px;
+    margin-top: 15px;
+    background-color:transparent;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 15px;
+    text-transform: uppercase;
+    width: 270px;
+    height: 38px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    color: var(--color);
+    z-index: 1;
+}
+.footerbtn::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   
+   .footerbtn::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .footerbtn::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .footerbtn:hover::before, .button:hover::after {
+    height: 600px;
+    width: 600px;
+   }
+   
+   .footerbtn:hover {
+    color:#0065c3;
+   }
+   
+   .footerbtn:active {
+    filter: brightness(.8);
+   }
+   .icons {
+    font-size: 30px;
+    margin-left: 140px;
+    margin-top: 10px;
+    word-spacing: 15px;
+   }
