--- a/PEPSI/style.css
+++ b/PEPSI/style.css
@@ -615,7 +615,6 @@
     animation-name: pulse;
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function:ease-in-out;
-    color: rgb(0, 0, 0, 1000);
 }
 .footer {
     background-color: #0065c3;
@@ -747,3 +746,244 @@
     margin-top: 10px;
     word-spacing: 15px;
    }
+@media only screen and (max-width:576px) {
+    .header {
+        position: fixed;
+        z-index: 1;
+        width: 100%;
+    }
+    .navbar {
+        background-color: #0065c3;
+        height: auto;  
+    }
+    .nav-item {
+        float: left;
+        margin-right: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+    .nav-item>a {
+        color: #ffffff;
+    }
+    .logoimg {
+        margin-right: 60px;
+        margin-left: 15px;
+    }
+    @-webkit-keyframes rotateOut {
+        0% {
+            opacity: 1
+        }
+    
+        to {
+            -webkit-transform: rotate(380deg);
+            transform: rotate(380deg);
+            opacity: 1
+        }
+    }
+    
+    @keyframes rotateOut {
+        0% {
+            opacity: 1
+        }
+    
+        to {
+            -webkit-transform: rotate(380deg);
+            transform: rotate(380deg);
+            opacity: 1
+        }
+    }
+    .logoimg:hover{
+        -webkit-animation-name: rotateOut;
+        animation-name: rotateOut;
+        -webkit-transform-origin: center;
+        transform-origin: center;
+        animation-duration: 0.3s;
+    }
+    .pepsi-btn {
+        --color: white;
+        width: 200px;
+        height: 33px;
+        margin-right: 30px;
+        background-color: transparent;
+        border-radius: 30px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        transition: .5s;
+        font-weight: bold;
+        font-size: 12px;
+        border: 2px solid white;
+        font-family: inherit;
+        text-transform: uppercase;
+        color: var(--color);
+        z-index: 1;
+       }
+       
+       .pepsi-btn::before, .button::after {
+        content: '';
+        display: block;
+        width: 0px;
+        height: 50px;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        border-radius: 50%;
+        z-index: -1;
+        background-color: var(--color);
+        transition: 1s ease;
+       }
+       
+       .pepsibtn::before {
+        top: -1em;
+        left: -1em;
+       }
+       
+       .pepsi-btn::after {
+        left: calc(100% + 10px);
+        top: calc(100% + 10px);
+       }
+       
+       .pepsi-btn:hover::before, .button:hover::after {
+        height: 410px;
+        width: 410px;
+       }
+       
+       .pepsi-btn:hover {
+        color:#0065c3;
+       }
+       
+       .pepsi-btn:active {
+        filter: brightness(.8);
+       }
+       .navbar-toggler {
+        border: 2px solid #ffffff;
+        width: 50px;
+        padding: 0px;
+        height: 40px;
+        text-align: center;
+    }
+    .navbar-collapse {
+        text-align: center;
+    }
+    .content {
+        background-image: url(images/bachgroung.png);
+        height: auto;
+        width: 100%;
+        background-size:cover;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .first {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    #second {
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+    .bottles {
+        width: 70%;
+        margin: 0px;
+    }
+    .umlock {
+        width: 75%;
+        margin: 0px;
+        margin-top: 130px;
+    }
+    .Get-it-now {
+        align-items: start;
+        margin: 0px;
+    }
+    
+    .Get-it-now>button::before, .button::after {
+        content: '';
+        display: block;
+        width: 0px;
+        height: 50px;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        border-radius: 50%;
+        z-index: -1;
+        background-color: var(--color);
+        transition: 1s ease;
+       }
+       .Get-it-now>button {
+        --color: white;
+        border: 2px solid #ffffff;
+        border-radius: 30px;
+        background-color:black;
+        color: #ffffff;
+        font-weight: bold;
+        font-size: 16px;
+        margin: 0px;
+        width: 160px;
+        height: 38px;
+        justify-content: start;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        transition: .5s;
+        color: var(--color);
+        z-index: 1;
+    }
+       
+       .Get-it-now>button::before {
+        top: -1em;
+        left: -1em;
+       }
+       
+       .Get-it-now>button::after {
+        left: calc(100% + 10px);
+        top: calc(100% + 10px);
+       }
+       
+       .Get-it-now>button:hover::before, .button:hover::after {
+        height: 410px;
+        width: 410px;
+       }
+       
+       .Get-it-now>button:hover {
+        color:#0065c3;
+       }
+       
+       .Get-it-now>button:active {
+        filter: brightness(.8);
+       }
+    .Get-it-now > p {
+        color: #ffffff;
+        font-size: 11px;
+        font-weight:600;
+        text-align: center;
+    }
+    .content2 {
+        background-color: black;
+        height: 710px;
+        width: 100%;
+        display: none;
+        /* position: absolute; */
+    }
+    .pepsi-can {
+        width: 75%;
+        margin-left: -90px;
+        margin-top: -110px;
+    }
+    .new-improved-taste {
+        margin-left: -450px;
+        margin-top: -410px;
+    }
+    .canzero {
+        width: 40%;
+        margin-left: 50px;
+        margin-top: -200px;
+    }
+    .try-it-to-believe-it {
+        width: 30%;
+        margin-top: -550px;
+        margin-left: 800px;
+    }
+}
