--- a/PEPSI/style.css
+++ b/PEPSI/style.css
@@ -1235,5 +1235,103 @@
 .content7mbl{
     display: block;
 }
-
+.content8 {
+    background-image: url(images/content8bg.png);
+    background-repeat: no-repeat;
+    background-position:unset;
+    background-size:cover;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+}
+.left-section{
+    list-style: none;
+}
+.left-section>li>h1 {
+    color: #ffffff;
+    font-family: cervo;
+    font-size: 30px;
+    text-align: center;
+    line-height: 30px;
+    padding-top: 0px;
+    margin: 0px;
+    margin-top: -58px;
+}
+.left-section>li>p {
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+    line-height: 16px;
+    /* margin-left: 120px;
+    width: 400px; */
+    margin: 0px;
+    margin-top: 10px;
+    padding: 0px 60px 0px 60px;
+}
+.viewproduct::before, .button::after {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+   }
+   .viewproduct {
+    --color: white;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    margin: 0px;
+    margin-left: 120px;
+    margin-top: 30px;
+    margin-bottom: 150px;
+    background-color:transparent;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 14px;
+    width: 160px;
+    height: 32px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    color: var(--color);
+    z-index: 1;
+}
+   
+   .viewproduct::before {
+    top: -1em;
+    left: -1em;
+   }
+   
+   .viewproduct::after {
+    left: calc(100% + 10px);
+    top: calc(100% + 10px);
+   }
+   
+   .viewproduct:hover::before, .button:hover::after {
+    height: 410px;
+    width: 410px;
+   }
+   
+   .viewproduct:hover {
+    color:#0065c3;
+   }
+   
+   .viewproduct:active {
+    filter: brightness(.8);
+   }
+.right-section {
+    list-style: none;
+}
+.right-section>li>img {
+    width: 100%;
+    padding: 50px;
+    margin-top: 100px;
+    margin-left: 0px;
+}
 }
