--- a/PEPSI/style.css
+++ b/PEPSI/style.css
@@ -1346,7 +1346,6 @@
 }
 .content9{
     text-align: center;
-    background-color: red;
 }
 .content9>h1{
     color: #0065c3;
@@ -1406,6 +1405,7 @@
 .footer {
     background-color: #0065c3;
     height: auto;
+    width: 100%;
     margin-top: 5px;
     display: flex;
     flex-direction: column;
@@ -1555,5 +1555,8 @@
     display: block;
     border-bottom: 1px solid #ffffff;
     width: 95%;
+}
+.navbar-toggler:active{
+    
 }
 }
