--- a/PEPSI/style.css
+++ b/PEPSI/style.css
@@ -1266,6 +1266,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    overflow: hidden;
 }
 .left-section{
     list-style: none;
@@ -1571,6 +1572,9 @@
     display: block;
     border-bottom: 1px solid #ffffff;
     width: 95%;
+}
+.content6 {
+    width: 100%;
 }
 .navbar-toggler:active{
     
